@@ -31,6 +31,8 @@ munin (work)
   * Fixed typo in linux/fw_forwarded_local (Deb#275535).
   * Fixed typo in linux/fw_packets (Deb#275537).
   * Added module Munin::Node::SNMP, a Net::SNMP sublcass for plugins.
+  * Added SNMP plugins for temperature and fan info provided by the
+    Fujitsu Siemens ServerView agents.
 
 munin (1.1.4)
 
